2010-06-25  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14834: About module need padding
	* Fixed bug #14844: Milliseconds on logout (Thanks to Georg Ringer)

2010-06-22  Benjamin Mack  <benni@typo3.org>

	* Branching TYPO3 4.4.0 to TYPO3_4-4

2010-06-22  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14814: Improve texts in the 1-2-3 Install Tool
	* Fixed bug #14822: Missing link in Install Tool footer
	* Follow-up to ##14465: Make use of the new Sprite API - create new relation in IRRE

2010-06-22  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Updated ext_emconf.php files in system extensions

2010-06-22  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raising Extbase and Fluid to 1.2.0

2010-06-22  Steffen Kamper  <info@sk-typo3.de>

	* added empty ie6.css to prevent log flooding
	* removed unnecessary files in sysext sys_action
	* Fixed bug #14816 bugfix : BE login in IE6 looks bad (Thanks to Jigal van Hemert and Jo Hasenau)
	* Follow-up to #14538: Icons missing in page tree for "Page contains" pages (Thanks to Steffen Ritter)
	* Added manuals for taskcenter and sys_action (Thanks to Georg Ringer)
	* Fixed bug #14771: Updates for taskcenter, sys_action, impexp (Thanks to Georg Ringer)
	* Follow-up to #14465: Make use of the new Sprite API throughout the TYPO3 Core Backend (Thanks to Steffen Ritter)
	* Follow-up to #14798: Sitename missing in Login form

2010-06-22  Benjamin Mack  <benni@typo3.org>

	* Followup to #14636: Improvements to new Backend skin - small change to the versioning color in the pagetree (Thanks to Steffen Gebert)
	* Updated and formatted NEWS.txt

2010-06-21  Benjamin Mack  <benni@typo3.org>

	* Followup to #14636: Improvements to new Backend skin - Smaller TCEforms changes, RTE styling (Thanks to Steffen Gebert)

2010-06-21  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14804: Updated extension icons for system extensions (Thanks to Jigal van Hemert)